--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,8 +6,8 @@ target 'StoryboardLoadable_Example' do
   target 'StoryboardLoadable_Tests' do
     inherit! :search_paths
 
-    pod 'Quick', '~> 1.2.0'
-    pod 'Nimble', '~> 7.0.2'
+    pod 'Quick'
+    pod 'Nimble'
     pod 'FBSnapshotTestCase' , '~> 2.1.4'
     pod 'Nimble-Snapshots' , '~> 6.3.0'
   end
